@@ -27,8 +27,8 @@ static master_test_t master_tests[] = {
   { "Simple Tests",  -1, CK_FAILURE, "This test should fail" },
   { "Simple Tests",  -1, CK_FAILURE, "Assertion '2 == 3' failed" },
   { "Simple Tests",  -1, CK_FAILURE, "Assertion '4 == 5' failed" },
-  { "Simple Tests",  -1, CK_FAILURE, "Assertion '2 != 3' failed" },
-  { "Simple Tests",  -1, CK_FAILURE, "Assertion '4 != 5' failed" },
+  { "Simple Tests",  -1, CK_FAILURE, "Failure '2 != 3' occured" },
+  { "Simple Tests",  -1, CK_FAILURE, "Failure '4 != 5' occured" },
   { "Simple Tests",  -1, CK_FAILURE, "3 != 4" },
   { "Simple Tests",  -1, CK_FAILURE, "5 != 6" },
   { "Simple Tests",  -1, CK_FAILURE, "7 == 7" },
